fix: push submit bio button up to avoid overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -99,7 +99,7 @@
 .xmargin {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 10px;
   justify-content: center;
   align-items: center;
   text-align: center;
